--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,61 +25,56 @@
         android:id="@+id/titleHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginStart="12dp"
         android:text="Height"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        app:layout_constraintBottom_toTopOf="@+id/seekBarHeight"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/heightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
-        android:layout_marginEnd="24dp"
         android:text="2.00"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/titleHeight" />
 
     <SeekBar
         android:id="@+id/seekBarHeight"
         android:layout_width="393dp"
         android:layout_height="45dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="32dp"
+        android:max="300"
+        android:min="100"
+        android:progress="200"
         android:progressBackgroundTint="#5E35B1"
         android:progressTint="#A1A0DC"
         android:thumb="@drawable/my_thumb"
         android:thumbTint="#A1A0DC"
-        android:min="100"
-        android:max="300"
-        android:progress="200"
+        app:layout_constraintBottom_toTopOf="@+id/titleWeight"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleHeight" />
+        app:layout_constraintHorizontal_bias="0.388"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/titleWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="12dp"
         android:text="Weight"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarHeight" />
+        app:layout_constraintBottom_toTopOf="@+id/seekBarWeight"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/weightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="28dp"
         android:text="100"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarHeight" />
+        app:layout_constraintEnd_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toTopOf="@+id/titleWeight" />
 
     <Button
         android:id="@+id/buttonCalculate"
@@ -99,35 +94,35 @@
         android:id="@+id/seekBarWeight"
         android:layout_width="393dp"
         android:layout_height="45dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="20dp"
         android:max="2000"
         android:progress="1000"
         android:progressBackgroundTint="#5E35B1"
         android:progressTint="#A1A0DC"
         android:thumb="@drawable/my_thumb"
         android:thumbTint="#A1A0DC"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCalculate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleWeight" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
+        android:layout_marginEnd="16dp"
         android:text="m"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/heightText"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/heightText" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginEnd="16dp"
         android:text="kg"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/weightText"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarHeight" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/weightText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
